--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
-/node_modules
-.idea
+/credentials.txt
+/logBlockBreak.txt
+/logDamage.txt
+/PearlPlayer.json
+/package-lock.json
+/.idea/
+/node_modules/
